swan_kubernetes/swan_helm/swan_microservices/valkey-cart/templates/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey-cart
spec:
  podSelector:
    matchLabels:
      opentelemetry.io/name: valkey-cart
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: otel-demo
      podSelector:
        matchLabels:
          opentelemetry.io/name: cart
    ports:
    - protocol: TCP
      port: 6379
